--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h2 id="card-name" class="card-name"></h2>
     <p id="card-text" class="card-text"></p>
     <div class="buttons">
-      <button id="translate-btn" class="btn translate-btn">Traducir</button>
-      <button id="random-btn" class="btn random-btn">Aleatorio</button>
+      <button id="translate-btn" class="btn translate-btn">Texto original inglés</button>
+      <button id="random-btn" class="btn random-btn">Cambiar plano</button>
     </div>
   </div>
 
